--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -2,20 +2,21 @@ name: C++ CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./scripts
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Make script executable
-        run: chmod +x mongoc.sh
-      - name: Run script
-        run: ./mongoc.sh
+        run: chmod +x scripts/mongoc.sh
+      - name: Run mongo c driver compile script
+        run: ./scripts/mongoc.sh
+      - name: Setup meson build
+        run: meson setup build --prefer-static --default-library=static
+      - name: Compile CMS application
+        run: meson compile -C build
