--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Install development toolchain
+        run: sudo apt install -y git meson libboost-all-dev
       - name: Make script executable
         run: chmod +x scripts/mongoc.sh
       - name: Run mongo c driver compile script
