--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,7 +7,7 @@ on:
     branches: ["master"]
 
 jobs:
-  run-script:
+  compile:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -22,3 +22,13 @@ jobs:
         run: meson setup build --prefer-static --default-library=static
       - name: Compile CMS application
         run: meson compile -C build
+
+  trigger-deploy:
+    runs-on: ubuntu-latest
+    needs: compile
+    steps:
+      - name: Call deploy workflow
+        uses: ./.github/workflows/deploy.yml
+        secrets:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
