--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -27,5 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: compile
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Call deploy workflow
         uses: ./.github/workflows/deploy.yml
