--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -27,7 +27,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: compile
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Call deploy workflow
-        uses: ./.github/workflows/deploy.yml
+      - name: Trigger deploy
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'deploy.yml',
+              ref: 'master'
+            })
