--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Trigger deploy
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GIT_HUB_WORKFLOW_TOKEN }}
           script: |
             await github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
