--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,3 +20,19 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and deploy image
         run: docker buildx build --platform linux/amd64 -t rfledesma/blog:$(cat VERSION | xargs) -t rfledesma/blog:latest --push .
+
+  trigger-release:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Trigger release
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GIT_HUB_WORKFLOW_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'release.yml',
+              ref: 'master'
+            })
