--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Make script executable
         run: chmod +x scripts/release.sh
       - name: Install jq
-        run: sudo apt install -y jq
+        run: sudo apt install -y jq unzip
       - name: Install Render CLI
         run: |
           curl -L https://github.com/render-oss/cli/releases/download/v1.1.0/cli_1.1.0_linux_amd64.zip -o render.zip
-          unzip render.zip
-          sudo mv cli_v1.1.0 /usr/local/bin/render
+          unzip render.zip -d /tmp
+          sudo mv /tmp/cli_v1.1.0 /usr/local/bin/render
       - name: Trigger deploy with Render CLI
         env:
           # The CLI can authenticate via a Render API key without logging in.
