--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,15 @@ name: CD
 on:
   workflow_dispatch:
 
+# This ensures that no matter what triggers this workflow (a push, a manual trigger, etc.),
+# only one instance of it will ever run at a time across your entire repository.
+concurrency:
+  # Use the workflow's name as the unique lock.
+  # All runs of this workflow will share the same concurrency group.
+  group: ${{ github.workflow }}
+  # If a new run is triggered, wait for the existing one to finish.
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
