--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Make script executable
         run: chmod +x scripts/release.sh
-      - name: Install jq
-        run: sudo apt install -y jq unzip
+      - name: Install release toolchain
+        run: sudo apt install -qqq -y jq unzip
       - name: Install Render CLI
         run: |
           curl -L https://github.com/render-oss/cli/releases/download/v1.1.0/cli_1.1.0_linux_amd64.zip -o render.zip
