--- a/subprojects/mongo-cxx-driver/.evergreen/generated_configs/functions.yml
+++ b/subprojects/mongo-cxx-driver/.evergreen/generated_configs/functions.yml
@@ -142,11 +142,23 @@ functions:
         args:
           - -c
           - build/benchmark/microbenchmarks all
-    - command: perf.send
+    - command: subprocess.exec
       type: system
       params:
-        name: perf
-        file: mongo-cxx-driver/results.json
+        binary: bash
+        working_dir: mongo-cxx-driver
+        include_expansions_in_env:
+          - project_id
+          - version_id
+          - build_variant
+          - task_name
+          - task_id
+          - execution
+          - requester
+          - revision_order_id
+        args:
+          - -c
+          - .evergreen/scripts/send-perf-data.sh
   build-package-debian:
     - command: subprocess.exec
       type: test
@@ -188,20 +200,27 @@ functions:
         permissions: public-read
         remote_file: mongo-cxx-driver/${branch_name}/${revision}/${version_id}/${build_id}/${execution}/rpm-packages.tar.gz
   build_mongohouse:
-    command: subprocess.exec
-    type: setup
-    params:
-      binary: bash
-      args:
-        - -c
-        - |
-          if [ ! -d "drivers-evergreen-tools" ]; then
-              git clone https://github.com/mongodb-labs/drivers-evergreen-tools.git
-          fi
-          cd drivers-evergreen-tools
-          export DRIVERS_TOOLS=$(pwd)
+    - command: ec2.assume_role
+      params:
+        role_arn: ${aws_test_secrets_role}
+    - command: subprocess.exec
+      type: setup
+      params:
+        binary: bash
+        include_expansions_in_env:
+          - AWS_ACCESS_KEY_ID
+          - AWS_SECRET_ACCESS_KEY
+          - AWS_SESSION_TOKEN
+        args:
+          - -c
+          - |
+            if [ ! -d "drivers-evergreen-tools" ]; then
+                git clone https://github.com/mongodb-labs/drivers-evergreen-tools.git
+            fi
+            cd drivers-evergreen-tools
+            export DRIVERS_TOOLS=$(pwd)
 
-          .evergreen/atlas_data_lake/pull-mongohouse-image.sh
+            .evergreen/atlas_data_lake/pull-mongohouse-image.sh
   check augmented sbom:
     - command: ec2.assume_role
       type: setup
@@ -487,7 +506,7 @@ functions:
       type: setup
       params:
         updates:
-          - { key: mongoc_version_minimum, value: 2.0.0 }
+          - { key: mongoc_version_minimum, value: 2.0.2 }
     - command: subprocess.exec
       type: setup
       params:
